fix(bitcoin-address): fix position on mobile

--- a/src/assets/styles/modules/options.scss
+++ b/src/assets/styles/modules/options.scss
@@ -44,12 +44,21 @@
   }
 
   &__bitcoin-address {
+    position: absolute;
+    right: -5px;
+    top: -1.5 * $base-spacing;
     opacity: 0;
     visibility: hidden;
-    padding-right: $base-spacing / 2;
+    margin-right: $base-spacing / 2;
     color: #ffffff;
     font-weight: 900;
-    font-size: 14px;
+    font-size: 12px;
+
+    @include larger-than(mobile) {
+      position: relative;
+      padding-right: $base-spacing / 2;
+      font-size: 14px;
+    }
   }
 
   &__bitcoin-icon-wrapper {
